--- a/package.json
+++ b/package.json
@@ -11,14 +11,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.0",
+    "@angular/cdk": "^12.2.11",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
+    "@angular/flex-layout": "^12.0.0-beta.35",
     "@angular/forms": "~12.2.0",
+    "@angular/localize": "~12.2.0",
+    "@angular/material": "^12.2.11",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "bootstrap": "^4.5.0",
+    "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
+    "save": "^2.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
