--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.5.0",
     "jquery": "^3.6.0",
+    "ngx-toastr": "^14.1.4",
     "rxjs": "~6.6.0",
     "save": "^2.4.0",
     "tslib": "^2.3.0",
