Added User Authentication

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.6.1",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
+    "ngx-toastr": "^14.1.4",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "save": "^2.4.0",
