--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@tinymce/tinymce-angular": "^4.2.4",
     "bootstrap": "^4.5.0",
     "jquery": "^3.6.0",
     "ngx-toastr": "^14.1.4",
+    "ngx-webstorage": "^9.0.0",
     "rxjs": "~6.6.0",
     "save": "^2.4.0",
     "tslib": "^2.3.0",
