--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/platform-browser-dynamic": "^12.2.13",
     "@angular/router": "^12.2.13",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "ag-grid-angular": "^26.2.0",
+    "ag-grid-community": "^26.2.0",
     "bootstrap": "^4.6.1",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
